--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 		<div id="fullpage">
 			<div data-anchor="home" class="section">
 				<section>
-					<img src="images/logo.png" height="450" alt="Logo">
+					<img class="logo" src="images/logo.png" alt="Logo">
 				</section>
 			</div>
 			<div data-anchor="about" class="section">
 				<section>
 					<p class="head"><b>About</b></p><br>
 					<p>I'm an indie developer from Russia trying to do something interesting and unusual.<br>
-					Created <a href="https://play.google.com/store/apps/details?id=com.HardelGames.ParticleFight" target="_blank"><b>Particle Fight</b></a>, Next Floor, Hard Pixel.</p>
+					<br>Created <a href="https://play.google.com/store/apps/details?id=com.HardelGames.ParticleFight" target="_blank"><b>Particle Fight</b></a>, Next Floor, Hard Pixel.</p>
 				</section>
 			</div>
 			<div data-anchor="contact" class="section">
@@ -38,9 +38,9 @@
 				<br>
 				<section class="photos">
 					<p>
-						<a href="https://vk.com/hardelgames" target="_blank"><img src="images/vk.png" height="75" alt="VK"></a>
-						<a href="https://t.me/l4ine" target="_blank"><img src="images/telegram.png" height="85" alt="TG"></a>
-						<a href="https://twitter.com/hardelgames" target="_blank"><img src="images/twitter.png" height="75" alt="INST"></a>
+						<a href="https://vk.com/hardelgames" target="_blank"><img src="images/vk.png" alt="VK"></a>
+						<a href="https://t.me/l4ine" target="_blank"><img src="images/telegram.png" alt="TG"></a>
+						<a href="https://twitter.com/hardelgames" target="_blank"><img src="images/twitter.png" alt="INST"></a>
 					</p>
 				</section>
 			</div>
